--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar border-bottom border-body sticky-top">
             <div class="container">
-                <a class="navbar-brand" href="#">Super app</a>
+                <a class="navbar-brand" href="#">
+                    <img src="assets/icon.svg" width="50%" height="auto" alt="..." />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -40,6 +42,7 @@
                 <h1>A Bootstrap 5 Starter Template</h1>
                 <p class="lead">A complete project boilerplate built with Bootstrap</p>
                 <p>Bootstrap v5.2.3</p>
+                <img class="rounded mx-auto d-block fluffy-size" src="assets/Fluffy.svg" alt="fluffy" />
             </div>
         </div>
         <!-- Bootstrap core JS-->
