--- a/index.html
+++ b/index.html
@@ -49,9 +49,21 @@
                 <p>My name's Khiem. But you should call me poophead.</p>
             </div>
             <div class="banner-wrapper">
-                <img src="assets/BANNER/1_blue_band.svg" class="banner-image" alt="..." />
-                <div class="centered-text">I'm working as a teacher and a software engineer.</div>
+                <!-- Blue banner background -->
+                <img src="assets/BANNER/1_blue_band.svg" class="blue-banner" alt="Blue Band" />
+
+                <!-- Centered text over blue band -->
+                <div class="centered-text">
+                    I'm working as a teacher and a software engineer.
+                </div>
+
+                <!-- Purple band SVG sitting on top of blue banner at the bottom -->
+                <div class="purple-band-wrapper">
+                    <img src="assets/BANNER/2_purple_band.svg" class="purple-band-image" alt="Purple Band" />
+                    <p class="life-timer">Alive for 20 years, 132 days, 4 hours</p>
+                </div>
             </div>
+
             <div class="container text-center">
                 <p>Below are some of my past works.</p>
             </div>
