--- a/index.html
+++ b/index.html
@@ -45,32 +45,27 @@
         <!-- Page content-->
 
         <div>
-            <div class="container text-center">
+            <div class="container text-center py-3">
                 <p>My name's Khiem. But you should call me poophead.</p>
             </div>
+
             <div class="banner-wrapper">
-                <!-- Blue banner background -->
-                <img src="assets/BANNER/1_blue_band.svg" class="blue-banner" alt="Blue Band" />
-
-                <!-- Centered text over blue band -->
-                <div class="centered-text">
-                    I'm working as a teacher and a software engineer.
-                </div>
-
-                <!-- Purple band SVG sitting on top of blue banner at the bottom -->
-                <div class="purple-band-wrapper">
-                    <img src="assets/BANNER/2_purple_band.svg" class="purple-band-image" alt="Purple Band" />
-                    <p class="life-timer">Alive for 20 years, 132 days, 4 hours</p>
-                </div>
+                <img src="assets/BANNER/1_blue_band.svg" class="blue-band" alt="Blue Band" />
+                <img src="assets/BANNER/2_blue_float.svg"
+                     class="blue-float parallax-layer" data-speed="0.8" alt="Floating element" />
+                <div class="centered-text">I'm working as a teacher and a software engineer.</div>
             </div>
 
-            <div class="container text-center">
+
+            <div class="container text-center py-5">
                 <p>Below are some of my past works.</p>
             </div>
         </div>
 
 
-<!--        <div class="container text-center">-->
+
+
+        <!--        <div class="container text-center">-->
 <!--            &lt;!&ndash; Responsive aspect-ratio box &ndash;&gt;-->
 <!--            <div class="mx-auto" style="width: 80%;">-->
 <!--                <img class="mx-auto d-block fluffy-size img-fluid mb-3" src="assets/BUBBLY_CHAT/bubbly_chat_title.svg" alt="fluffy" />-->
@@ -93,7 +88,7 @@
 
             function updateParallax() {
                 const scrollTop = window.scrollY;
-                const maxScroll = 50; // adjust this to control how far the parallax moves
+                const maxScroll = 80; // adjust this to control how far the parallax moves
 
                 const clampedScroll = Math.min(scrollTop, maxScroll);
 
