--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
             </div>
 
             <div class="banner-wrapper">
-                <img src="assets/BANNER/1_blue_band.svg" class="blue-band" alt="Blue Band" />
-                <img src="assets/BANNER/2_blue_float.svg"
-                     class="blue-float parallax-layer" data-speed="0.8" alt="Floating element" />
+                <img src="assets/BANNER/1_top_banner.svg" class="blue-band" alt="Blue Band" />
+                <img src="assets/BANNER/2_top_float.svg" class="blue-float parallax-layer" data-speed="0.8" alt="Floating element" />
                 <div class="centered-text">I'm working as a teacher and a software engineer.</div>
             </div>
 
