--- a/index.html
+++ b/index.html
@@ -1,105 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-        <title>Khiem Nguyen</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/styles-custom.css" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar justify-content-between sticky-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="assets/khiem_logo.svg" width="50%" height="auto" alt="..." />
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+    <title>Khiem Nguyen</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles-custom.css" rel="stylesheet" />
+</head>
 
-        <!-- Page content-->
-
-        <div>
-            <div class="container text-center py-3">
-                <p>My name's Khiem. But you should call me poophead.</p>
-            </div>
-
-            <div class="banner-wrapper">
-                <img src="assets/BANNER/1_top_banner.svg" class="blue-band" alt="Blue Band" />
-                <img src="assets/BANNER/2_top_float.svg" class="blue-float parallax-layer" data-speed="0.4" alt="Floating element" />
-                <div class="centered-text">I'm working as a teacher and a software engineer.</div>
-            </div>
-
-
-            <div class="container text-center py-5">
-                <p>Below are some of my past works.</p>
+<body>
+    <!-- Responsive navbar-->
+    <nav class="navbar justify-content-between sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="assets/khiem_logo.svg" width="50%" height="auto" alt="..." />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
 
 
+    <!-- Page content-->
 
+    <div>
+        <div class="container text-center py-3">
+            <p>My name's Khiem. But you should call me poophead.</p>
+        </div>
 
-        <!--        <div class="container text-center">-->
-<!--            &lt;!&ndash; Responsive aspect-ratio box &ndash;&gt;-->
-<!--            <div class="mx-auto" style="width: 80%;">-->
-<!--                <img class="mx-auto d-block fluffy-size img-fluid mb-3" src="assets/BUBBLY_CHAT/bubbly_chat_title.svg" alt="fluffy" />-->
-<!--                <div class="position-relative parallax-container" style="aspect-ratio: 5 / 3; width: 100%;">-->
-<!--                    <img src="assets/BUBBLY_CHAT/1_left_guy.svg" class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.2" />-->
-<!--                    <img src="assets/BUBBLY_CHAT/2_right_guy.svg" class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.3" />-->
-<!--                    <img src="assets/BUBBLY_CHAT/3_bubbles.svg" class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.8" />-->
-<!--                    <img src="assets/BUBBLY_CHAT/4_left_box.svg" class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.2" />-->
-<!--                    <img src="assets/BUBBLY_CHAT/5_right_box.svg" class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.3" />-->
-<!--                    <img src="assets/BUBBLY_CHAT/6_chat_field.svg" class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.4" />-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="banner-wrapper">
+            <img src="assets/BANNER/1_top_banner.svg" class="blue-band" alt="Blue Band" />
+            <img src="assets/BANNER/2_top_float.svg" class="blue-float parallax-layer" data-speed="0.4"
+                alt="Floating element" />
+            <div class="centered-text">I'm working as a teacher and a software engineer.</div>
+        </div>
 
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script>
-            const layers = document.querySelectorAll(".parallax-layer");
+        <div class="container text-center py-5">
+            <p>Below are some of my past works.</p>
+        </div>
+    </div>
 
-            function updateParallax() {
-                const scrollTop = window.scrollY;
-                const maxScroll = 120; // adjust this to control how far the parallax moves
+    <div class="mx-auto" style="width: 80%;">
+        <img class="mx-auto d-block fluffy-size img-fluid mb-3" src="assets/BUBBLY_CHAT/bubbly_chat_title.svg"
+            alt="fluffy" />
+        <div class="position-relative parallax-container" style="aspect-ratio: 5 / 3; width: 100%;">
+            <img src="assets/BUBBLY_CHAT/1_left_guy.svg"
+                class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.2" />
+            <img src="assets/BUBBLY_CHAT/2_right_guy.svg"
+                class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.3" />
+            <img src="assets/BUBBLY_CHAT/3_bubbles.svg"
+                class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.8" />
+            <img src="assets/BUBBLY_CHAT/4_left_box.svg"
+                class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.2" />
+            <img src="assets/BUBBLY_CHAT/5_right_box.svg"
+                class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.3" />
+            <img src="assets/BUBBLY_CHAT/6_chat_field.svg"
+                class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.4" />
+        </div>
+    </div>
+    </div>
 
-                const clampedScroll = Math.min(scrollTop, maxScroll);
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script>
+        const layers = document.querySelectorAll(".parallax-layer");
 
-                layers.forEach(layer => {
-                    const speed = parseFloat(layer.dataset.speed);
-                    const offset = clampedScroll * speed;
-                    layer.style.transform = `translateY(${offset}px)`;
-                });
-            }
+        function updateParallax() {
+            const scrollTop = window.scrollY;
+            const maxScroll = 120; // adjust this to control how far the parallax moves
 
-            window.addEventListener("scroll", updateParallax);
-        </script>
+            const clampedScroll = Math.min(scrollTop, maxScroll);
 
-    </body>
+            layers.forEach(layer => {
+                const speed = parseFloat(layer.dataset.speed);
+                const offset = clampedScroll * speed;
+                layer.style.transform = `translateY(${offset}px)`;
+            });
+        }
+
+        window.addEventListener("scroll", updateParallax);
+    </script>
+
+</body>
+
 </html>
