--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <img src="assets/khiem_logo.svg" width="50%" height="auto" alt="..." />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
@@ -51,25 +51,25 @@
 
     <!-- Page content-->
 
-    <div>
-        <div class="container text-center py-3">
-            <p>My name's Khiem. But you should call me poophead.</p>
-        </div>
-
-        <div class="banner-wrapper">
-            <img src="assets/BANNER/1_top_banner.svg" class="blue-band" alt="Blue Band" />
-            <img src="assets/BANNER/2_top_float.svg" class="blue-float parallax-layer" data-speed="0.8"
-                alt="Floating element" />
-            <div class="centered-text">I'm working as a teacher and a software engineer.</div>
-        </div>
-
-        <div class="container text-center py-5">
-            <p>Below are some of my past works.</p>
-        </div>
+    <div class="container text-center py-3">
+        <p>My name's Khiem. But you should call me poophead.</p>
     </div>
 
+    <div class="banner-wrapper">
+        <img src="assets/BANNER/1_top_banner.svg" class="blue-band" alt="Blue Band" />
+        <img src="assets/BANNER/2_top_float.svg" class="blue-float parallax-layer" data-speed="0.8"
+            alt="Floating element" />
+        <div class="banner-centered-text">I'm working as a teacher and a software engineer.</div>
+    </div>
+
+    <div class="container text-center py-5">
+        <p>Below are some of my work</p>
+    </div>
+
+    <!-- Bubbly chat display -->
+
     <div class="mx-auto" style="width: 80%;">
-        <img class="mx-auto d-block fluffy-size img-fluid mb-3" src="assets/BUBBLY_CHAT/bubbly_chat_title.svg"
+        <img class="mx-auto fluffy-size img-fluid mb-3" src="assets/BUBBLY_CHAT/bubbly_chat_title.svg"
             alt="fluffy" />
         <div class="position-relative parallax-container" style="aspect-ratio: 5 / 3; width: 100%;">
             <img src="assets/BUBBLY_CHAT/1_left_guy.svg"
@@ -86,12 +86,18 @@
                 class="parallax-layer position-absolute top-0 start-0 w-100 h-100" data-speed="0.4" />
         </div>
     </div>
-    </div>
 
-    <!-- Bootstrap core JS-->
+    <!-- Bubbly chat display -->
+    
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+        Popover on top
+    </button>
+
+    <!-- Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
+    <!-- Custom JS-->
     <script>
+        // Parallax
         const layers = document.querySelectorAll(".parallax-layer");
 
         function updateParallax() {
@@ -126,6 +132,11 @@
         window.addEventListener("scroll", updateParallax);
         window.addEventListener("resize", updateParallax); // handle resize as well
         window.addEventListener("load", updateParallax);   // initial load
+
+        // Enable Bootstrap default popover
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+        const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
     </script>
 </body>
+
 </html>
